--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
-# Eigene geheime Zeichenkette eintragen (nicht ins Repository committen)
-SECRET_KEY=bitte_ein_sicheres_passwort_setzen
+# Umgebungsvariablen fuer die Rezept Sharing Plattform
+# Kopiere diese Datei nach .env und passe die Werte an
 
-# Optional: eigener Datenbankpfad
-# DATABASE=database.db
+# Geheimer Schluessel fuer JWT-Token (in Produktion aendern!)
+SECRET_KEY=mein_geheimer_schluessel_123
